# tweak_shader_ae_plugin

./: Cargo.toml  Justfile  LICENSE.txt  LICENSE_FOR_ADOBE.txt  README.md  build.rs
.github/: build.yaml
.github/workflows/: build.yaml
example_shaders/: ReadMe.md  ascii.glsl  blue_noise.glsl  hello_compute.glsl  twister.fs
src/: lib.rs  param_util.rs  preprocessing.rs  render.rs  types.rs  u15_conversion.rs  window_handle.rs
src/resources/: error.fs  to_fp.fs  to_fp.glsl  to_u15.fs  to_u15.glsl
