[package]
name = "tweak_shader_ae_rs"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
after-effects = { git = "https://github.com/AdrianEddy/after-effects.git" }
after-effects-sys = { git = "https://github.com/AdrianEddy/after-effects.git" }
tweak_shader = { version = "0.2.6", features = ["after_effects"] }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
pretty-hex = "0.4"
win_dbg_logger = "0.1"
log-panics = "2.1"
pollster = "0.3.0"
rfd = "0.12.1"
homedir = "0.2.1"

[build-dependencies]
pipl = { git = "https://github.com/AdrianEddy/after-effects.git"  }
