[package]
name = "tweak_shader_ae_rs"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
after-effects = { git = "https://github.com/AdrianEddy/after-effects.git" }
after-effects-sys = { git = "https://github.com/AdrianEddy/after-effects.git" }
env_logger = "0.11.3"
glsl = { version = "7.0.0", default-features = false }
tweak_shader = { path = "0.3.2" }
log = "0.4"
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
pretty-hex = "0.4"
win_dbg_logger = "0.1"
log-panics = "2.1"
pollster = "0.3.0"
rfd = "0.12.1"
homedir = "0.2.1"

[build-dependencies]
pipl = { git = "https://github.com/AdrianEddy/after-effects.git"  }
