[package]
name = "tweak_shader_ae_rs"
version = "0.2.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
after-effects = { git = "https://github.com/virtualritz/after-effects", commit = "7f666ce" }
after-effects-sys = "0.2"
env_logger = "0.11.3"
glsl = { version = "7.0.0", default-features = false }
tweak_shader = "0.4.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
bincode = "1.3"
pretty-hex = "0.4"
win_dbg_logger = "0.1"
log-panics = "2.1"
pollster = "0.3.0"
rfd = "0.12.1"
homedir = "0.2.1"

[build-dependencies]
pipl = { git = "https://github.com/AdrianEddy/after-effects.git" }
